Update pom.xml so it support JavaFx GUI testing